// Configuración específica del módulo mobile-core

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    // Dependencia del módulo común
    api project(':common')

    // Appium for mobile testing — W3-H3-APP bump 8.6.0 → 9.4.0 (Core Audit 2026-05-27).
    // Nota drift §4.3: el spec proponía añadir `io.appium:appium-uiautomator2` +
    // `appium-xcuitest` como deps Maven explícitas; esos artefactos NO existen en Maven Central
    // (son drivers de Appium Server, distribuídos vía npm). El java-client 9.x sigue
    // exponiendo AndroidDriver/IOSDriver sin deps adicionales.
    api 'io.appium:java-client:9.4.0'

    // Selenium WebDriver (compatible con Appium 9) — W3-H3-SEL bump 4.13.0 → 4.27.0
    api 'org.seleniumhq.selenium:selenium-java:4.27.0'
    api 'org.seleniumhq.selenium:selenium-support:4.27.0'

    // async-http-client pin = guard de CVE-2024-53990 (CVSS 9.2); transitivamente ausente
    // post Selenium 4.27 / Appium 9.4 (0 jars en runtimeClasspath, verificado 2026-06) → es
    // cap de regresión, no exposición viva. Guard: AsyncHttpClientCveGuardTest. Ver docs/SECURITY_ACCEPTED_RISKS.md §B.
    // Forzar versión segura de Netty (4.1.121.Final) para mitigar CVEs en io.netty:netty-codec-http
    // ✅ CVE-2024-29025 (MEDIUM): HttpPostRequestDecoder OOM — CORREGIDO en 4.1.121.Final
    //
    // CVEs ACEPTADOS sin parche upstream — fuente única de verdad:
    //     docs/SECURITY_ACCEPTED_RISKS.md (TASK-J02, política de revisión cada 90 días)
    // ⚠️ CVE-2025-58056 (LOW)    — Request smuggling via chunk extensions
    // ⚠️ CVE-2025-67735 (MEDIUM) — CRLF injection in HttpRequestEncoder
    // ⚠️ CVE-2026-33870 (HIGH)   — HTTP Request Smuggling via Chunked Extension Quoted-String
    // Versión 4.1.121.Final mantenida como mitigación; revalidar compatibilidad con Appium 9.4.0 en el siguiente ciclo de auditoría de deps
    constraints {
        implementation('org.asynchttpclient:async-http-client:2.12.4') {
            because 'CVE-2024-53990: AsyncHttpClient CookieStore vulnerability'
        }
        implementation('io.netty:netty-codec-http:4.1.121.Final') {
            because 'CVE-2024-29025, CVE-2025-58056, CVE-2025-67735, CVE-2026-33870: múltiples vulnerabilidades HTTP en versiones < 4.1.121.Final'
        }
        implementation('io.netty:netty-common:4.1.121.Final') {
            because 'Actualización de seguridad Netty: alineación de versión con netty-codec-http'
        }
        implementation('io.netty:netty-buffer:4.1.121.Final') {
            because 'Actualización de seguridad Netty: alineación de versión con netty-codec-http'
        }
        implementation('io.netty:netty-codec:4.1.121.Final') {
            because 'Actualización de seguridad Netty: alineación de versión con netty-codec-http'
        }
        implementation('io.netty:netty-codec-socks:4.1.121.Final') {
            because 'Actualización de seguridad Netty: alineación de versión con netty-codec-http'
        }
        implementation('io.netty:netty-handler:4.1.121.Final') {
            because 'Actualización de seguridad Netty: alineación de versión con netty-codec-http'
        }
        implementation('io.netty:netty-handler-proxy:4.1.121.Final') {
            because 'Actualización de seguridad Netty: alineación de versión con netty-codec-http'
        }
        implementation('io.netty:netty-resolver:4.1.121.Final') {
            because 'Actualización de seguridad Netty: alineación de versión con netty-codec-http'
        }
        implementation('io.netty:netty-transport:4.1.121.Final') {
            because 'Actualización de seguridad Netty: alineación de versión con netty-codec-http'
        }
        implementation('io.netty:netty-transport-native-unix-common:4.1.121.Final') {
            because 'Actualización de seguridad Netty: alineación de versión con netty-codec-http'
        }
        implementation('io.netty:netty-transport-native-epoll:4.1.121.Final') {
            because 'Actualización de seguridad Netty: alineación de versión con netty-codec-http'
        }
        implementation('io.netty:netty-transport-native-kqueue:4.1.121.Final') {
            because 'Actualización de seguridad Netty: alineación de versión con netty-codec-http'
        }
        implementation('io.netty:netty-transport-classes-epoll:4.1.121.Final') {
            because 'Actualización de seguridad Netty: alineación de versión con netty-codec-http'
        }
        implementation('io.netty:netty-transport-classes-kqueue:4.1.121.Final') {
            because 'Actualización de seguridad Netty: alineación de versión con netty-codec-http'
        }
    }

    // AssertJ — fluent assertions para validaciones en steps
    api 'org.assertj:assertj-core:3.27.7'

    // JSON processing para configuraciones de dispositivos
    api "com.fasterxml.jackson.core:jackson-core:${rootProject.ext.jacksonVersion}"
    api "com.fasterxml.jackson.core:jackson-databind:${rootProject.ext.jacksonVersion}"

    // Screenshot utilities for mobile
    // Nota: extentreports:5.1.2 llega transitivamente desde :common — no duplicar aquí
    api 'commons-io:commons-io:2.14.0'

    // Device capabilities management
    api 'org.apache.commons:commons-lang3:3.18.0'

    // Image comparison for mobile testing (excluyendo conflictos)
    api('ru.yandex.qatools.ashot:ashot:1.5.4') {
        exclude group: 'org.seleniumhq.selenium', module: 'selenium-remote-driver'
    }

    // ========================================================================
    // DEPENDENCIAS DE TEST
    // ========================================================================
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.0'
    testImplementation 'org.mockito:mockito-core:5.8.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.8.0'
    testImplementation 'org.assertj:assertj-core:3.27.7'
    testRuntimeOnly    'org.junit.jupiter:junit-jupiter-engine:5.10.0'
}

// Test configuration
test {
    useJUnitPlatform()

    // Control de logging para tests
    systemProperties = [
        // Log4j2 Control
        'log4j2.configurationFile': 'classpath:log4j2.xml',
        'log4j2.level': 'INFO',
        'log4j2.rootLogger.level': 'INFO',
        'log4j2.statusLoggerLevel': 'WARN',

        // SLF4J Control - Silencia mensaje de inicialización
        'org.slf4j.simpleLogger.defaultLogLevel': 'INFO',
        'slf4j.internal.verbosity': 'ERROR',

        // Apache HTTP Client
        'org.apache.commons.logging.Log': 'org.apache.commons.logging.impl.SimpleLog',
        'httpclient.wire.header': 'INFO',
        'httpclient.wire.content': 'INFO'
    ]

    // JVM Arguments para control de logging
    jvmArgs = [
        '-Dlog4j2.configurationFile=classpath:log4j2.xml',
        '-Dlog4j2.level=INFO',
        '-Dorg.slf4j.simpleLogger.defaultLogLevel=error'
    ]

    testLogging {
        events 'passed', 'skipped', 'failed'
        showStandardStreams = false
        showExceptions = true
        showCauses = true
        showStackTraces = false
        exceptionFormat = 'SHORT'
    }
}

// NOTA: La publicación Maven está configurada automáticamente en el build.gradle raíz
// para todos los submódulos. No es necesario configurarla aquí.
